// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cache get if cache hit, put item on top 1`] = `
Object {
  "key1": Object {
    "next": null,
    "previous": "key3",
  },
  "key2": Object {
    "next": "key3",
    "previous": null,
  },
  "key3": Object {
    "next": "key1",
    "previous": "key2",
  },
}
`;

exports[`cache get remove item that ttl expired - Many items in cache 1`] = `
Object {
  "key1": Object {
    "next": "key3",
    "previous": null,
  },
  "key3": Object {
    "next": null,
    "previous": "key1",
  },
}
`;

exports[`cache get remove item that ttl expired - Ony one item in cache 1`] = `Object {}`;

exports[`cache init Initialises the cache successfully 1`] = `
Object {
  "key1": Object {
    "next": "key2",
    "previous": null,
  },
  "key2": Object {
    "next": "key3",
    "previous": "key1",
  },
  "key3": Object {
    "next": null,
    "previous": "key2",
  },
}
`;

exports[`cache init Will not initialise if it is already initialised 1`] = `Object {}`;

exports[`cache set Evicts item if cache size exceeds 1`] = `
Object {
  "key2": Object {
    "next": null,
    "previous": null,
  },
}
`;

exports[`cache set Rejects invalid cache 1`] = `Object {}`;

exports[`cache set set items to cache correctly 1`] = `
Object {
  "key1": Object {
    "next": null,
    "previous": null,
  },
}
`;

exports[`cache set set items to cache correctly 2`] = `
Object {
  "key1": Object {
    "next": "key2",
    "previous": null,
  },
  "key2": Object {
    "next": null,
    "previous": "key1",
  },
}
`;
